--- a/nimgame.css
+++ b/nimgame.css
@@ -1,3 +1,9 @@
+/* @media screen and (max-width: 350px) {
+  h1,.heading,h5,#b,#demo,#player1,.players,button,marquee,img,.stones1,input[type=text] {
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+ 
+  }
+} */
 body
 {
   background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(background1.jpg);
@@ -28,20 +34,17 @@ img
 {
   height: 100px;
   border-radius: 100%;
-  margin-left: 500px;
-  float: left;
-}
-.stones1{
-  position: relative;
+/*   margin-left: 500px; */
+/*   float: left; */
 }
 input[type=text]{
 width:5%;
 border:none
-margin-left: 2px;
+/* margin-left: 2px; */
 }
 button{
   color: white;
-  margin-left: 6%;
+/*   margin-left: 6%; */
 font-size: 15px;
 padding: 11px;
 padding-right: 3%;
@@ -62,7 +65,7 @@ box-shadow:         0px 2px 1px rgba(50, 50, 50, 0.75);
 }
 .players
 {
-  margin-left: 35%;
+/*   margin-left: 35%; */
 }
 h5
 {
@@ -70,14 +73,14 @@ h5
 }
 #b
 {
-  margin-right: 50%
-  float:left;
+/*   margin-right: 50%
+  float:left; */
   padding-left: 2%;
   padding-right: 2%;
 }
 #demo{
   font-family: 'Lobster', cursive;
-  margin-left: 5%;
+/*   margin-left: 5%; */
   font-size: 25px;
   color: #cc0e74;
 }
