--- a/nimgame.css
+++ b/nimgame.css
@@ -1,6 +1,6 @@
 /* @media screen and (max-width: 350px) {
   h1,.heading,h5,#b,#demo,#player1,.players,button,marquee,img,.stones1,input[type=text] {
-    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller 
  
   }
 } */
